archivos de citas

--- a/MiceProject/cites/citas.bib
+++ b/MiceProject/cites/citas.bib
@@ -1,3 +1,4 @@
+# EWSmethods
 @Manual{ewsmethodsR,
     title = {{EWSmethods}: an R package to forecast tipping points at the 
 community level using early warning signals, resilience measures, and 
@@ -8,3 +9,71 @@ machine learning models},
     year = {2023},
     doi = {10.1111/ecog.06674},
   }
+
+# 
+@article{Gilbert2012,
+    author = {Gilbert, Jack A and Steele, Joshua A and Caporaso, J Gregory and Steinbrück, Lars and Reeder, Jens and Temperton, Ben and Huse, Susan and McHardy, Alice C and Knight, Rob and Joint, Ian and Somerfield, Paul and 
+Fuhrman, Jed A and Field, Dawn},
+    title = "{Defining seasonal marine microbial community dynamics}",
+    journal = {The ISME Journal},
+    volume = {6},
+    number = {2},
+    pages = {298-308},
+    year = {2011},
+    month = {08},
+    abstract = "{Here we describe, the longest microbial time-series analyzed to date using high-resolution 16S rRNA tag pyrosequencing of samples taken monthly over 6 years at a temperate marine coastal site off Plymouth, UK. 
+Data treatment effected the estimation of community richness over a 6-year period, whereby 8794 operational taxonomic units (OTUs) were identified using single-linkage preclustering and 21 130 OTUs were identified by denoising the 
+data. The Alphaproteobacteria were the most abundant Class, and the most frequently recorded OTUs were members of the Rickettsiales (SAR 11) and Rhodobacteriales. This near-surface ocean bacterial community showed strong 
+repeatable seasonal patterns, which were defined by winter peaks in diversity across all years. Environmental variables explained far more variation in seasonally predictable bacteria than did data on protists or metazoan biomass. 
+Change in day length alone explains \&gt;65\% of the variance in community diversity. The results suggested that seasonal changes in environmental variables are more important than trophic interactions. Interestingly, microbial 
+association network analysis showed that correlations in abundance were stronger within bacterial taxa rather than between bacteria and eukaryotes, or between bacteria and environmental variables.}",
+    issn = {1751-7362},
+    doi = {10.1038/ismej.2011.107},
+    url = {https://doi.org/10.1038/ismej.2011.107},
+    eprint = {https://academic.oup.com/ismej/article-pdf/6/2/298/56400003/41396\_2012\_article\_bfismej2011107.pdf},
+}
+
+#
+@Article{Bush2017,
+author={Bush, Timothy
+and Diao, Muhe
+and Allen, Rosalind J.
+and Sinnige, Ruben
+and Muyzer, Gerard
+and Huisman, Jef},
+title={Oxic-anoxic regime shifts mediated by feedbacks between biogeochemical processes and microbial community dynamics},
+journal={Nature Communications},
+year={2017},
+month={Oct},
+day={06},
+volume={8},
+number={1},
+pages={789},
+abstract={Although regime shifts are known from various ecosystems, the involvement of microbial communities is poorly understood. Here we show that gradual environmental changes induced by, for example, eutrophication or global 
+warming can induce major oxic-anoxic regime shifts. We first investigate a mathematical model describing interactions between microbial communities and biogeochemical oxidation-reduction reactions. In response to gradual changes 
+in oxygen influx, this model abruptly transitions between an oxic state dominated by cyanobacteria and an anoxic state with sulfate-reducing bacteria and phototrophic sulfur bacteria. The model predictions are consistent with 
+observations from a seasonally stratified lake, which shows hysteresis in the transition between oxic and anoxic states with similar changes in microbial community composition. Our results suggest that hysteresis loops and tipping 
+points are a common feature of oxic-anoxic transitions, causing rapid drops in oxygen levels that are not easily reversed, at scales ranging from small ponds to global oceanic anoxic events.},
+issn={2041-1723},
+doi={10.1038/s41467-017-00912-x},
+url={https://doi.org/10.1038/s41467-017-00912-x}
+}
+
+#
+@article{GONZE201841,
+title = {Microbial communities as dynamical systems},
+journal = {Current Opinion in Microbiology},
+volume = {44},
+pages = {41-49},
+year = {2018},
+note = {Microbiota},
+issn = {1369-5274},
+doi = {https://doi.org/10.1016/j.mib.2018.07.004},
+url = {https://www.sciencedirect.com/science/article/pii/S1369527418300092},
+author = {Didier Gonze and Katharine Z Coyte and Leo Lahti and Karoline Faust},
+abstract = {Nowadays, microbial communities are frequently monitored over long periods of time and the interactions between their members are explored in vitro. This development has opened the way to apply mathematical models to 
+characterize community structure and dynamics, to predict responses to perturbations and to explore general dynamical properties such as stability, alternative stable states and periodicity. Here, we highlight the role of 
+dynamical systems theory in the exploration of microbial communities, with a special emphasis on the generalized Lotka–Volterra (gLV) equations. In particular, we discuss applications, assumptions and limitations of the gLV model, 
+mention modifications to address these limitations and review stochastic extensions. The development of dynamical models, together with the generation of time series data, can improve the design and control of microbial 
+communities.}
+}
